--- a/BloodBank/BloodBank/BloodBank.csproj
+++ b/BloodBank/BloodBank/BloodBank.csproj
@@ -268,6 +268,7 @@
     <Content Include="Views\Donor\Create.cshtml" />
     <Content Include="Views\Donor\Details.cshtml" />
     <Content Include="Views\Donor\Edit.cshtml" />
+    <Content Include="Views\Donor\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
